fixed icon alignment + renamed some guide file titles

--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -46,6 +46,7 @@ img.largeemote {
     display: inline;
     width: 2.15rem;
     height: auto;
+    margin-bottom: 0.1rem;
 }
 
 img.headingemote {
